2002-10-18  Jeff Hobbs  <jeffh@ActiveState.com>

	* unix/Makefile.in (dist): add any mac/tcl*.sea.hqx files

	************************
	****  8.3.5 TAGGED  ****
	************************

	* changes: updated for 8.3.5 release

2002-10-17  Jeff Hobbs  <jeffh@ActiveState.com>

	* win/configure: Regen.
	* win/configure.in: Set CFLAGS to "" if the user
	did not set CFLAGS in the env. This keeps AC_PROG_CC
	from adding "-g -O2" to the CFLAGS by default. (dejong)

2002-10-16  Jeff Hobbs  <jeffh@ActiveState.com>

	* win/configure:                 add workaround for cygwin windres
	* win/tcl.m4 (SC_CONFIG_CFLAGS): problem. [Patch #624010] (howell)

2002-10-15  Jeff Hobbs  <jeffh@ActiveState.com>

	* README:            updated to 8.3.5 patchlevel
	* generic/tcl.h:     with readmes pointing to www.tcl.tk
	* mac/README:
	* tools/tcl.wse.in:
	* unix/configure:
	* unix/configure.in:
	* unix/tcl.spec:
	* win/README.binary:
	* win/configure:
	* win/configure.in:

	* unix/configure:
	* unix/tcl.m4: updated platform targets to match 8.4 fixes.

	backport of cygwin build support cobbled together.
	[Patch #622183] (hobbs, howell, khan, dejong)

	* win/configure: regen.
	* win/configure.in: Add configure time test for SEH
	support in the compiler.
	* win/tcl.m4 (SC_PATH_TCLCONFIG): Support one-tree build.
	(SC_PATH_TKCONFIG): Likewise.
	(SC_PROG_TCLSH): Likewise.
	(SC_CONFIG_CFLAGS): Assume real Cygwin port and remove -mno-cygwin 
	flags.  Add -mwin32 to extra_cflags and extra_ldflags.
	Remove ``-e _WinMain@16'' from LDFLAGS_WINDOW.

	* win/tclWinFile.c (TclpReadlink): alternative readlink for cygwin.

	* win/tclWin32Dll.c (ESP, EBP, TclpCheckStackSpace,
	_except_checkstackspace_handler):
	* win/tclWinChan.c (ESP, EBP, Tcl_MakeFileChannel,
	_except_makefilechannel_handler):
	* win/tclWinFCmd.c (ESP, EBP, DoRenameFile,
	_except_dorenamefile_handler,
	DoCopyFile, _except_docopyfile_handler):
	Implement SEH support under gcc using inline asm.